--- a/teams/new-hires.yml
+++ b/teams/new-hires.yml
@@ -18,6 +18,9 @@ controls:
   macos_settings:
     custom_settings:
       - path: ../lib/macos/configuration-profiles/disable-bluetooth-file-sharing.mobileconfig
+  macos_updates:
+    deadline: "2025-07-01"
+    minimum_version: "15.4.0"
   scripts:
     - path: ../lib/macos/scripts/remove-zoom-artifacts.script.sh
 team_settings:
