--- a/teams/engineering.yml
+++ b/teams/engineering.yml
@@ -15,8 +15,17 @@ queries:
 agent_options:
   path: ../lib/agent-options.yml
 controls:
+  macos_setings:
+    custom_settings:
+      - path: ../lib/macos/configuration-profiles/disable-bluetooth-file-sharing.mobileconfig
+      - path: ../lib/macos/configuration-profiles/passcode-settings-ddm.json
   scripts:
     - path: ../lib/macos/scripts/remove-zoom-artifacts.script.sh
+    - path: ../lib/windows/scripts/set-wallpaper.ps1
+  enable_disk_encryption: true
+ipados_updates:
+  deadline: "2025-06-31"
+  minimum_version: "18.2"
 team_settings:
   secrets:
     - secret: "$FLEET_ENGINEERING_ENROLL_SECRET"
