--- a/teams/engineering.yml
+++ b/teams/engineering.yml
@@ -10,6 +10,7 @@
 name: Engineering
 policies:
   - path: ../lib/macos/policies/macos-device-health.policies.yml
+  - path: ../lib/windows/policies/all-windows-updates-installed.policies.yaml
 queries:
   - path: ../lib/all/queries/collect-failed-login-attempts.queries.yml
 agent_options:
@@ -30,6 +31,13 @@ controls:
     deadline: "2025-06-31"
     minimum_version: "18.2"
 team_settings:
+  webhook_settings:
+    failing_policies_webhook:
+      enable_failing_policies_webhook: true
+      destination_url: https://example.org/webhook_handler
+      host_batch_size: 0
+      policy_ids:
+        - 1
   secrets:
     - secret: "$FLEET_ENGINEERING_ENROLL_SECRET"
   features:
