--- a/teams/engineering.yml
+++ b/teams/engineering.yml
@@ -36,8 +36,10 @@ team_settings:
       enable_failing_policies_webhook: true
       destination_url: https://example.org/webhook_handler
       host_batch_size: 0
-      policy_ids:
+      policy_id:
         - 1
+      policy_ids:
+        - 4
   secrets:
     - secret: "$FLEET_ENGINEERING_ENROLL_SECRET"
   features:
