--- a/teams/engineering.yml
+++ b/teams/engineering.yml
@@ -45,4 +45,4 @@ team_settings:
     enable_software_inventory: true
 software:
   packages:
-    - path: ../lib/cloudflare-warp.yml
+    - path: ../scripts/cloudflare-warp.yml
